--- a/have-you-got-viruses-or-spyware-heres/index.html
+++ b/have-you-got-viruses-or-spyware-heres/index.html
@@ -9,7 +9,7 @@ their machines due to the inevitable spyware and viruses found on a
 Windows machine. Lately I have been switching people to
 <a href=http://www.ubuntu.com/>Ubuntu</a>, and even getting them to buy machines
 to install it on (<a href=http://www.dell.com/open>Dell</a>). But I understand
-and have no zealotry for Linux when it comes to fixing peoples&rsquo; real
+and have no zealotry for Linux when it comes to fixing peoples' real
 world problems. I always mention <a href=http://www.ubuntu.com/>Ubuntu</a> as a
 matter of course, and also <a href=http://www.apple.com/mac>Macs</a>. I follow up
 peoples Ubuntu installs with friendly emails explaining the free help
